--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "rollup -c -w",
     "build": "rollup -c",
+    "test": "mocha src/**/*.test.js",
     "prepare": "node tools/generateAjvDrafts.js",
     "prepublishOnly": "npm run build"
   },
@@ -39,6 +40,7 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "11.0.1",
     "mkdirp": "1.0.4",
+    "mocha": "8.2.1",
     "rollup": "2.36.1",
     "rollup-plugin-svelte": "6.1.1",
     "rollup-plugin-terser": "7.0.2",
