At linter, fix linting issues

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "rollup -c -w",
     "build": "rollup -c",
     "test": "mocha src/**/*.test.js",
+    "lint": "eslint --cache src/**/*.svelte src/**/*.js tools/**/*.js *.js --ignore-pattern src/generated --ignore-pattern examples",
     "prepare": "node tools/generateAjvDrafts.js",
     "prepublishOnly": "npm run build"
   },
@@ -39,6 +40,13 @@
     "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "11.0.1",
+    "eslint": "7.15.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.1.0",
+    "eslint-plugin-svelte3": "2.7.3",
     "mkdirp": "1.0.4",
     "mocha": "8.2.1",
     "rollup": "2.36.1",
