--- a/package.json
+++ b/package.json
@@ -17,19 +17,21 @@
     "build": "rollup -c",
     "test": "mocha src/**/*.test.js",
     "lint": "eslint --cache src/**/*.svelte src/**/*.js tools/**/*.js *.js --ignore-pattern src/generated --ignore-pattern examples",
+    "postinstall": "cd tools && node generateEmbeddedAceJsonWorker.js && cd ..",
     "prepublishOnly": "npm run lint && npm test && npm run build"
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "ace-builds": "^1.4.12",
     "ajv": "^7.0.3",
     "classnames": "^2.2.6",
     "debug": "^4.3.1",
     "diff-sequences": "^26.6.2",
     "immutable-json-patch": "^1.1.1",
+    "jsonrepair": "^2.0.0",
     "lodash-es": "^4.17.20",
     "natural-compare-lite": "^1.4.0",
-    "jsonrepair": "^2.0.0",
     "svelte-awesome": "^2.3.0",
     "svelte-select": "^3.16.1",
     "svelte-simple-modal": "^0.6.1",
