--- a/tools/develop-svelte/package.json
+++ b/tools/develop-svelte/package.json
@@ -7,17 +7,17 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "@rollup/plugin-commonjs": "16.0.0",
+    "@rollup/plugin-node-resolve": "11.1.1",
+    "rollup": "2.38.5",
+    "rollup-plugin-css-only": "3.1.0",
+    "rollup-plugin-livereload": "2.0.0",
+    "rollup-plugin-svelte": "7.1.0",
+    "rollup-plugin-terser": "7.0.2",
+    "svelte": "3.32.1"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0",
+    "sirv-cli": "1.0.11",
     "svelte-jsoneditor": "file:../.."
   }
 }
