--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "debug": "^4.3.1",
     "diff-sequences": "^26.6.2",
     "immutable-json-patch": "^1.1.1",
+    "json-source-map": "^0.6.1",
     "jsonrepair": "^2.2.0",
     "lodash-es": "^4.17.21",
     "natural-compare-lite": "^1.4.0",
