chore: exclude the auto generated CHANGELOG.md from linting by prettier

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,6 +1,6 @@
 {
-  "extension": ["js", "ts"],
+  "extension": ["js"],
   "require": "ts-node/register",
-  "spec": ["src/**/*.test.js", "src/**/*.test.ts"],
+  "spec": ["src/**/*.test.js"],
   "reporter": "dot"
 }
