--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "__lint": "prettier --check --plugin-search-dir=. . && eslint --cache --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateEmbeddedAceJsonWorker.js && cd ..",
-    "prepublishOnly": "npm run lint && npm test && npm run package",
-    "release": "standard-version && git push --tag && npm publish package"
+    "release": "npm run lint && npm test && npm run package && standard-version && git push && git push --tag && npm publish package/"
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
