--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
   },
   "dependencies": {
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "ace-builds": "^1.4.12",
     "ajv": "^8.6.2",
     "classnames": "^2.3.1",
@@ -37,9 +37,9 @@
     "jsonrepair": "^2.2.1",
     "lodash-es": "^4.17.21",
     "natural-compare-lite": "^1.4.0",
-    "sass": "1.37.0",
+    "sass": "^1.37.5",
     "svelte-awesome": "^2.3.2",
-    "svelte-select": "^4.2.7",
+    "svelte-select": "^4.3.0",
     "svelte-simple-modal": "^1.0.0",
     "sveltip": "^0.0.1"
   },
@@ -54,8 +54,8 @@
     "@types/cookie": "0.4.1",
     "@types/lodash-es": "4.17.4",
     "@types/mocha": "9.0.0",
-    "@typescript-eslint/eslint-plugin": "4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.2.0",
@@ -66,10 +66,10 @@
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.3.1",
-    "svelte": "3.41.0",
-    "svelte-check": "2.2.3",
+    "svelte": "3.42.1",
+    "svelte-check": "2.2.4",
     "svelte-preprocess": "4.7.4",
-    "svelte2tsx": "0.4.3",
+    "svelte2tsx": "0.4.5",
     "ts-node": "10.1.0",
     "tslib": "2.3.0",
     "typescript": "4.3.5"
