--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sass": "^1.37.5",
     "svelte-awesome": "^2.3.2",
     "svelte-select": "^4.3.1",
-    "svelte-simple-modal": "^1.0.0"
+    "svelte-simple-modal": "^1.0.0",
+    "vanilla-picker": "^2.11.2"
   },
   "devDependencies": {
     "@commitlint/cli": "13.1.0",
