--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "ace-builds": "^1.4.12",
-    "ajv": "^8.6.2",
+    "ajv": "^8.6.3",
     "classnames": "^2.3.1",
     "debug": "^4.3.2",
     "diff-sequences": "^27.0.6",
@@ -38,9 +38,9 @@
     "jsonrepair": "^2.2.1",
     "lodash-es": "^4.17.21",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.39.2",
+    "sass": "^1.42.1",
     "svelte-awesome": "^2.3.2",
-    "svelte-select": "^4.4.1",
+    "svelte-select": "^4.4.3",
     "svelte-simple-modal": "^1.0.3",
     "vanilla-picker": "^2.11.2"
   },
@@ -49,28 +49,28 @@
     "@commitlint/config-conventional": "13.1.0",
     "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.4",
+    "@rollup/plugin-node-resolve": "13.0.5",
     "@rollup/plugin-typescript": "8.2.5",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "1.0.0-next.172",
     "@types/cookie": "0.4.1",
-    "@types/lodash-es": "4.17.4",
+    "@types/lodash-es": "4.17.5",
     "@types/mocha": "9.0.0",
-    "@typescript-eslint/eslint-plugin": "4.31.0",
-    "@typescript-eslint/parser": "4.31.0",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.2.1",
     "husky": "7.0.2",
     "mocha": "9.1.1",
-    "prettier": "2.4.0",
+    "prettier": "2.4.1",
     "prettier-plugin-svelte": "2.4.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.3.1",
-    "svelte": "3.42.5",
-    "svelte-check": "2.2.5",
-    "svelte-preprocess": "4.9.4",
-    "svelte2tsx": "0.4.5",
+    "svelte": "3.43.0",
+    "svelte-check": "2.2.6",
+    "svelte-preprocess": "4.9.5",
+    "svelte2tsx": "0.4.6",
     "ts-node": "10.2.1",
     "tslib": "2.3.1",
     "typescript": "4.4.3"
