fix: Add defaultContent to JSONEditor
This will allow react or other frameworks to initialize the editor with content and still recieve
updated content through onChange, but not continue to control the value as it is changed.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "svelte-kit dev",
     "preview": "svelte-kit preview",
     "build": "npm run package",
+    "build:watch": "npm run package -- --watch",
     "package": "svelte-kit package && rollup --config rollup.config.bundle.js",
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
