--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run package",
     "build:watch": "npm run package -- --watch",
     "package": "svelte-kit package && rollup --config rollup.config.bundle.js",
-    "test": "mocha",
+    "test": "mocha --require ts-node/register './src/**/*.test.{js,ts}'",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. .",
@@ -62,7 +62,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.2.1",
     "husky": "7.0.2",
-    "mocha": "9.1.2",
+    "mocha": "9.1.3",
     "prettier": "2.4.1",
     "prettier-plugin-svelte": "2.4.0",
     "rollup-plugin-svelte": "7.1.0",
@@ -72,7 +72,7 @@
     "svelte-check": "2.2.6",
     "svelte-preprocess": "4.9.5",
     "svelte2tsx": "0.4.6",
-    "ts-node": "10.2.1",
+    "ts-node": "^10.3.0",
     "tslib": "2.3.1",
     "typescript": "4.4.3"
   }
