--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "checkJs": false,
     "paths": {
       "$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"]
+      "$lib/*": ["src/lib/*"],
+      "svelte-jsoneditor": ["src/lib"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
