feat: replace Ace editor with CodeMirror 6 (WIP)

--- a/package.json
+++ b/package.json
@@ -23,13 +23,22 @@
     "lint": "prettier --check --plugin-search-dir=. .",
     "__lint": "prettier --check --plugin-search-dir=. . && eslint --cache --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. .",
-    "prepare": "husky install && cd tools && node generateEmbeddedAceJsonWorker.js && cd ..",
+    "prepare": "husky install",
     "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "0.19.1",
+    "@codemirror/commands": "0.19.8",
+    "@codemirror/gutter": "0.19.9",
+    "@codemirror/highlight": "0.19.7",
+    "@codemirror/history": "0.19.2",
+    "@codemirror/lang-json": "0.19.2",
+    "@codemirror/search": "0.19.9",
+    "@codemirror/state": "0.19.9",
+    "@codemirror/view": "0.19.46",
+    "@fontsource/fira-mono": "4.5.3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "ace-builds": "^1.4.14",
     "ajv": "^8.10.0",
     "classnames": "^2.3.1",
     "diff-sequences": "^27.5.1",
