--- a/package.json
+++ b/package.json
@@ -23,13 +23,24 @@
     "lint": "prettier --check --plugin-search-dir=. .",
     "__lint": "prettier --check --plugin-search-dir=. . && eslint --cache --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. .",
-    "prepare": "husky install && cd tools && node generateEmbeddedAceJsonWorker.js && node generateDiffSequenceEsm.js && cd ..",
+    "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "0.19.1",
+    "@codemirror/commands": "0.19.8",
+    "@codemirror/gutter": "0.19.9",
+    "@codemirror/highlight": "0.19.7",
+    "@codemirror/history": "0.19.2",
+    "@codemirror/lang-json": "0.19.2",
+    "@codemirror/language": "0.19.8",
+    "@codemirror/lint": "0.19.6",
+    "@codemirror/search": "0.19.9",
+    "@codemirror/state": "0.19.9",
+    "@codemirror/view": "0.19.46",
+    "@fontsource/fira-mono": "4.5.3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "ace-builds": "^1.4.14",
     "ajv": "^8.10.0",
     "classnames": "^2.3.1",
     "diff-sequences": "^27.5.1",
@@ -39,42 +50,42 @@
     "jsonrepair": "^2.2.1",
     "lodash-es": "^4.17.21",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.49.7",
+    "sass": "^1.49.9",
     "svelte-awesome": "^2.4.4",
     "svelte-select": "^4.4.7",
-    "svelte-simple-modal": "^1.3.0",
+    "svelte-simple-modal": "^1.3.1",
     "vanilla-picker": "^2.12.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "16.1.0",
-    "@commitlint/config-conventional": "16.0.0",
-    "@rollup/plugin-commonjs": "21.0.1",
+    "@commitlint/cli": "16.2.1",
+    "@commitlint/config-conventional": "16.2.1",
+    "@rollup/plugin-commonjs": "21.0.2",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-typescript": "8.3.0",
-    "@sveltejs/kit": "1.0.0-next.260",
+    "@rollup/plugin-typescript": "8.3.1",
+    "@sveltejs/kit": "1.0.0-next.294",
     "@types/cookie": "0.4.1",
     "@types/lodash-es": "4.17.6",
     "@types/mocha": "9.1.0",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
-    "eslint": "8.8.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-svelte3": "3.4.0",
+    "@typescript-eslint/eslint-plugin": "5.13.0",
+    "@typescript-eslint/parser": "5.13.0",
+    "eslint": "8.10.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-svelte3": "3.4.1",
     "husky": "7.0.4",
-    "mocha": "9.2.0",
+    "mocha": "9.2.1",
     "prettier": "2.5.1",
     "prettier-plugin-svelte": "2.6.0",
-    "rollup": "2.67.1",
+    "rollup": "2.70.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.3.2",
     "svelte": "3.46.4",
-    "svelte-check": "2.4.3",
-    "svelte-preprocess": "4.10.2",
-    "svelte2tsx": "0.5.3",
-    "ts-node": "10.5.0",
+    "svelte-check": "2.4.5",
+    "svelte-preprocess": "4.10.4",
+    "svelte2tsx": "0.5.5",
+    "ts-node": "10.7.0",
     "tslib": "2.3.1",
-    "typescript": "4.5.5"
+    "typescript": "4.6.2"
   }
 }
