chore: enable eslint

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check --plugin-search-dir=. .",
-    "__lint": "prettier --check --plugin-search-dir=. . && eslint --cache --ignore-path .gitignore .",
+    "lint": "npm run lint:prettier && npm run lint:eslint",
+    "lint:prettier": "prettier --check --plugin-search-dir=. .",
+    "lint:eslint": "eslint --cache --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
