--- a/package.json
+++ b/package.json
@@ -28,30 +28,30 @@
     "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
   },
   "dependencies": {
-    "@codemirror/basic-setup": "0.19.3",
-    "@codemirror/commands": "0.19.8",
-    "@codemirror/gutter": "0.19.9",
-    "@codemirror/highlight": "0.19.8",
-    "@codemirror/history": "0.19.2",
-    "@codemirror/lang-json": "0.19.2",
-    "@codemirror/language": "0.19.10",
-    "@codemirror/lint": "0.19.6",
-    "@codemirror/search": "0.19.10",
-    "@codemirror/state": "0.19.9",
-    "@codemirror/view": "0.19.48",
-    "@fontsource/fira-mono": "4.5.7",
+    "@codemirror/basic-setup": "^0.19.3",
+    "@codemirror/commands": "^0.19.8",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/highlight": "^0.19.8",
+    "@codemirror/history": "^0.19.2",
+    "@codemirror/lang-json": "^0.19.2",
+    "@codemirror/language": "^0.19.10",
+    "@codemirror/lint": "^0.19.6",
+    "@codemirror/search": "^0.19.10",
+    "@codemirror/state": "^0.19.9",
+    "@codemirror/view": "^0.19.48",
+    "@fontsource/fira-mono": "^4.5.8",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "ajv-dist": "^8.11.0",
     "classnames": "^2.3.1",
-    "diff-sequences": "^27.5.1",
+    "diff-sequences": "^28.0.2",
     "immutable-json-patch": "^1.1.2",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonrepair": "^2.2.1",
     "lodash-es": "^4.17.21",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.50.1",
+    "sass": "^1.51.0",
     "svelte-awesome": "^2.4.6",
     "svelte-select": "^4.4.7",
     "svelte-simple-modal": "^1.3.1",
@@ -60,17 +60,17 @@
   "devDependencies": {
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
-    "@rollup/plugin-commonjs": "21.1.0",
+    "@rollup/plugin-commonjs": "22.0.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.2.1",
     "@rollup/plugin-typescript": "8.3.2",
-    "@sveltejs/kit": "1.0.0-next.316",
-    "@types/cookie": "0.5.0",
+    "@sveltejs/kit": "1.0.0-next.323",
+    "@types/cookie": "0.5.1",
     "@types/lodash-es": "4.17.6",
-    "@types/mocha": "9.1.0",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "5.20.0",
-    "eslint": "8.13.0",
+    "@types/mocha": "9.1.1",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
+    "eslint": "8.14.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "3.4.1",
     "husky": "7.0.4",
@@ -86,7 +86,7 @@
     "svelte-preprocess": "4.10.6",
     "svelte2tsx": "0.5.9",
     "ts-node": "10.7.0",
-    "tslib": "2.3.1",
+    "tslib": "2.4.0",
     "typescript": "4.6.3"
   }
 }
