--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "vanilla-picker": "^2.12.1"
   },
   "devDependencies": {
+    "@babel/core": "7.18.2",
+    "@babel/preset-env": "7.18.2",
     "@commitlint/cli": "17.0.0",
     "@commitlint/config-conventional": "17.0.0",
+    "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "22.0.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.3.0",
