chore: upgrade to codemirror@6.0.0

--- a/package.json
+++ b/package.json
@@ -29,21 +29,19 @@
     "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
   },
   "dependencies": {
-    "@codemirror/basic-setup": "^0.19.3",
-    "@codemirror/commands": "^0.19.8",
-    "@codemirror/highlight": "^0.19.8",
-    "@codemirror/history": "^0.19.2",
-    "@codemirror/lang-json": "^0.19.2",
-    "@codemirror/language": "^0.19.10",
-    "@codemirror/lint": "^0.19.6",
-    "@codemirror/search": "^0.19.10",
-    "@codemirror/state": "^0.19.9",
-    "@codemirror/view": "^0.19.48",
+    "@codemirror/commands": "^6.0.0",
+    "@codemirror/lang-json": "^6.0.0",
+    "@codemirror/language": "^6.0.0",
+    "@codemirror/lint": "^6.0.0",
+    "@codemirror/search": "^6.0.0",
+    "@codemirror/state": "^6.0.0",
+    "@codemirror/view": "^6.0.0",
     "@fontsource/fira-mono": "^4.5.8",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "ajv-dist": "^8.11.0",
     "classnames": "^2.3.1",
+    "codemirror": "^6.0.0",
     "diff-sequences": "^28.1.1",
     "immutable-json-patch": "^1.1.2",
     "jmespath": "^0.16.0",
