chore: run CI tests on all branches

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -5,7 +5,8 @@ name: Node.js CI
 
 on:
   push:
-    branches: [develop, main]
+    branches:
+      - '*'
   pull_request:
     branches: [develop, main]
 
