feat: state refactor (#111)
BREAKING CHANGES:

- The type `JSONPath` is changed from `Array<string | number>` to `Array<string>`
- Some TypeScript types now come from `immutable-json-patch`

All changes:

- Refactor state from relying on a nested structure and Symbols into a solution that is lazy
  and uses a flat map with pointers. The new state is easier to understand and maintain.
- Create and use helper functions like `createValueSelection` to create selections, and use
  type guards like `isValueSelection` everywhere to simplify the code.
- Refactor `JSONPath` from having numeric indexes to having them as string
  (better compatible with `JSONPointer`, and less error-prone).
- Use more TypeScript types from `immutable-json-patch`
- Refactor and simplify the dragging logic
- Fix issues related to selection being updated after patch instead of in one go
- Refactor more code to TypeScript
- Add unit tests
- Performance is comparable to what it was

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint:eslint": "eslint --cache --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
-    "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/"
+    "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/",
+    "dry-run": "standard-version --dry-run"
   },
   "dependencies": {
     "@codemirror/commands": "^6.0.1",
