fix: make `svelte` a dependency, its type definitions are needed in TypeScript projects (see #19)

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lodash-es": "^4.17.21",
     "natural-compare-lite": "^1.4.0",
     "sass": "^1.53.0",
+    "svelte": "^3.48.0",
     "svelte-awesome": "^3.0.0",
     "svelte-select": "^4.4.7",
     "svelte-simple-modal": "^1.4.1",
@@ -84,7 +85,6 @@
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.5.0",
-    "svelte": "3.48.0",
     "svelte-check": "2.8.0",
     "svelte-preprocess": "4.10.7",
     "svelte2tsx": "0.5.11",
