chore: backward compatibility error message when using svelte-jsoneditor/dist/jsoneditor.js

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "preview": "svelte-kit preview",
     "build": "npm run build:svelte && npm run build:vanilla",
     "build:watch": "npm run build -- --watch",
-    "build:svelte": "svelte-kit sync && svelte-kit package",
-    "build:vanilla": "rollup --config rollup.config.bundle.js && rollup --config rollup.config.bundle-types.js && node tools/createVanillaPackageFiles.js",
+    "build:svelte": "svelte-kit sync && svelte-kit package && cpy --flat tools/dist-deprecated package/dist",
+    "build:vanilla": "del-cli package-vanilla && rollup --config rollup.config.bundle.js && rollup --config rollup.config.bundle-types.js && node tools/createVanillaPackageFiles.js",
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -75,6 +75,8 @@
     "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "@typescript-eslint/parser": "5.30.5",
+    "cpy-cli": "4.1.0",
+    "del-cli": "4.0.1",
     "eslint": "8.19.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
