chore: reorganize scripts in package.json

--- a/package.json
+++ b/package.json
@@ -17,8 +17,18 @@
     "preview": "svelte-kit preview",
     "build": "npm run build:svelte && npm run build:vanilla",
     "build:watch": "npm run build -- --watch",
-    "build:svelte": "svelte-kit sync && svelte-kit package && cpy --flat tools/dist-deprecated package/dist",
-    "build:vanilla": "del-cli package-vanilla && rollup --config rollup.config.bundle.js && rollup --config rollup.config.bundle-types.js && cpy CHANGELOG.md LICENSE.md SECURITY.md package-vanilla && cpy --rename README.md README-VANILLA.md package-vanilla && cpy --flat src/lib/themes package-vanilla/themes && node tools/createVanillaPackageJson.js",
+    "build:svelte": "npm-run-all build:svelte:**",
+    "build:svelte:sync": "svelte-kit sync",
+    "build:svelte:package": "svelte-kit package",
+    "build:svelte:deprecated": "cpy --flat tools/dist-deprecated package/dist",
+    "build:vanilla": "npm-run-all build:vanilla:**",
+    "build:vanilla:clean": "del-cli package-vanilla",
+    "build:vanilla:bundle": "rollup --config rollup.config.bundle.js",
+    "build:vanilla:bundle-types": "rollup --config rollup.config.bundle-types.js",
+    "build:vanilla:copy:files": "cpy CHANGELOG.md LICENSE.md SECURITY.md package-vanilla",
+    "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
+    "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
+    "build:vanilla:package.json": "node tools/createVanillaPackageJson.js",
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -28,7 +38,14 @@
     "lint:fortawesome-es-workaround": "node tools/validateFortawesomeESWorkaround.js",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
-    "release": "npm run lint && npm test && standard-version && npm run build && git push && git push --tag && npm publish package/ && npm publish package-vanilla/",
+    "release": "npm-run-all release:**",
+    "release:lint": "npm run lint",
+    "release:test": "npm test",
+    "release:version": "standard-version",
+    "release:build": "npm run build",
+    "release:push": "git push && git push --tag",
+    "release:publish:svelte-jsoneditor": "npm publish package/",
+    "release:publish:vanilla-jsoneditor": "npm publish package-vanilla/",
     "dry-run": "standard-version --dry-run"
   },
   "dependencies": {
@@ -82,6 +99,7 @@
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
     "mocha": "10.0.0",
+    "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
     "rollup": "2.75.7",
