feat: move bundle into a separate npm package vanilla-jsoneditor (#114)
BREAKING CHANGE:

The bundled file has been moved into a separate npm package named `vanilla-jsoneditor`. Please replace: `import { JSONEditor} from "svelte-jsoneditor/dist/jsoneditor.js"` with `import { JSONEditor} from "vanilla-jsoneditor"`. Read more about v0.5.0: https://github.com/josdejong/svelte-jsoneditor/blob/main/CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.4.0",
   "type": "module",
   "svelte": "index.js",
-  "module": "dist/jsoneditor.js",
-  "main": "dist/jsoneditor.js",
+  "module": "index.js",
+  "main": "index.js",
   "types": "index.d.ts",
   "repository": {
     "type": "git",
@@ -15,9 +15,21 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "preview": "svelte-kit preview",
-    "build": "npm run package",
-    "build:watch": "npm run package -- --watch",
-    "package": "svelte-kit sync && svelte-kit package && rollup --config rollup.config.bundle.js",
+    "build": "npm run build:svelte && npm run build:vanilla",
+    "build:watch": "npm run build -- --watch",
+    "build:svelte": "npm-run-all build:svelte:**",
+    "build:svelte:sync": "svelte-kit sync",
+    "build:svelte:package": "svelte-kit package",
+    "build:svelte:deprecated": "cpy --flat tools/dist-deprecated package/dist",
+    "build:vanilla": "npm-run-all build:vanilla:**",
+    "build:vanilla:clean": "del-cli package-vanilla",
+    "build:vanilla:bundle": "rollup --config rollup.config.bundle.js",
+    "build:vanilla:bundle-types": "rollup --config rollup.config.bundle-types.js",
+    "build:vanilla:postprocess-types": "node tools/postprocessVanillaTypes.js",
+    "build:vanilla:copy:files": "cpy CHANGELOG.md LICENSE.md SECURITY.md package-vanilla",
+    "build:vanilla:copy:readme": "cpy --rename README.md README-VANILLA.md package-vanilla",
+    "build:vanilla:copy:themes": "cpy --flat src/lib/themes package-vanilla/themes",
+    "build:vanilla:package.json": "node tools/createVanillaPackageJson.js",
     "test": "mocha",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -27,7 +39,14 @@
     "lint:fortawesome-es-workaround": "node tools/validateFortawesomeESWorkaround.js",
     "format": "prettier --write --plugin-search-dir=. .",
     "prepare": "husky install && cd tools && node generateDiffSequenceEsm.js && cd ..",
-    "release": "npm run lint && npm test && standard-version && npm run package && git push && git push --tag && npm publish package/",
+    "release": "npm-run-all release:**",
+    "release:lint": "npm run lint",
+    "release:test": "npm test",
+    "release:version": "standard-version",
+    "release:build": "npm run build",
+    "release:push": "git push && git push --tag",
+    "release:publish:svelte-jsoneditor": "npm publish package/",
+    "release:publish:vanilla-jsoneditor": "npm publish package-vanilla/",
     "dry-run": "standard-version --dry-run"
   },
   "dependencies": {
@@ -74,14 +93,18 @@
     "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "@typescript-eslint/parser": "5.30.5",
+    "cpy-cli": "4.1.0",
+    "del-cli": "4.0.1",
     "eslint": "8.19.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
     "mocha": "10.0.0",
+    "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
     "rollup": "2.75.7",
+    "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "standard-version": "9.5.0",
