--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "json-source-map": "^0.6.1",
     "jsonrepair": "^2.2.1",
     "lodash-es": "^4.17.21",
+    "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
     "sass": "^1.53.0",
     "svelte": "^3.48.0",
